[package]
name = "rp-decrypt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
cfb8 = "0.8.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"